ingress-nginx-config/smartcart-be-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartcart-be-ingress
  namespace: backend
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - smartcartgcsus.store
    secretName: example-tls
  rules:
    - host: smartcartgcsus.store
      http:
        paths:
        - pathType: Prefix
          path: "/backend"
          backend:
            service:
              name: backend
              port:
                number: 80
    - http:
        paths:
          - path: "/backend"
            pathType: Prefix
            backend:
               service:
                 name: backend
                 port:
                   number: 80
